[tool.poetry]
name = "luno_openapi"
version = "1.2.5"
description = "Luno API"
authors = ["Mourits de Beer <ff137@proton.me>"]
license = "LICENSE.md"
readme = "README.md"
repository = "https://github.com/ff137/luno_openapi"
keywords = ["OpenAPI", "OpenAPI-Generator", "Luno API"]
include = ["luno_openapi/py.typed"]

[tool.poetry.dependencies]
python = "^3.12"

urllib3 = ">= 2.2.2"
python-dateutil = ">= 2.9.0"
aiohttp = ">= 3.9.5"
aiohttp-retry = ">= 2.8.3"
pydantic = ">= 2.8"
typing-extensions = ">= 4.12.1"

[tool.poetry.dev-dependencies]
pytest = ">= 8.2.2"
anyio = ">= 4.4.0"
types-python-dateutil = ">= 2.9.0"
ruff = ">= 0.5.1"
playwright = "~= 1.49.0"
autoflake = "~= 2.3.1"
isort = "~= 6.0.0"
black = "~= 24.10.0"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
