[tool.poetry]
name = "luno_openapi"
version = "1.2.5"
description = "Luno API"
authors = ["Mourits de Beer <ff137@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ff137/luno_openapi"
keywords = ["OpenAPI", "OpenAPI-Generator", "Luno API"]

[tool.poetry.dependencies]
python = "^3.10"

urllib3 = "^2.3.0"
python-dateutil = "^2.9.0"
aiohttp = "^3.11.0"
aiohttp-retry = "^2.9.1"
pydantic = "^2.10.0"
typing-extensions = "^4.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
anyio = "^4.8.0"
types-python-dateutil = "^2.9.0"
ruff = "^0.9.7"
playwright = "^1.50.0"
autoflake = "^2.3.1"
isort = "^6.0.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.1"]
build-backend = "poetry.core.masonry.api"
